syntax = "proto3";

package grpc.product;

option java_multiple_files = true;
option java_package = "grpc.product";
option java_outer_classname = "Product";

message UpdateProductQuantityStubRequest {
  int64 productId = 1;
  int64 quantity = 2;
  string quantityType = 3;
}

message UpdateProductQuantityStubResponse {
  bool result = 1;
}

service UpdateProductQuantityService {
  rpc updateProductQuantity (UpdateProductQuantityStubRequest) returns (UpdateProductQuantityStubResponse);
}
